--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -4,7 +4,7 @@ docs:
   url: readme.md
 
 - title: Research
-  url: _pages/research.md
+  url: pages/research.md
 
 - title: Publications
-  url: _pages/publications.md
+  url: pages/publications.md
