--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -4,7 +4,7 @@ docs:
   url: README.md
 
 - title: Research
-  url: pages/research.md
+  url: research.md
 
 - title: Publications
-  url: pages/publications.md
+  url: publications.md
