--- a/_data/conferences.yaml
+++ b/_data/conferences.yaml
@@ -3,5 +3,5 @@
   booktitle: International Systems and Software Product Line Conference (SPLC)
   doi: 10.1145/2934466.2962731
   publisher: ACM
-  title: Extracting Software Product Lines: A Cost Estimation Perspective
+  title: Extracting Software Product Lines: A Cost Estimation Perspective.
   year: 2016
