Update and rename conferences.yaml to bib.yaml

--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -1,3 +1,5 @@
+proceedings:
+
 - id: Krueger2016CostEstimation
   author: Jacob Krüger, Wolfram Fenske, Jens Meinicke, Thomas Leich, and Gunter Saake
   booktitle: International Systems and Software Product Line Conference (SPLC)
