--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -545,6 +545,7 @@ editorials:
   title: "24th International Systems and Software Product Line Conference (SPLC) - Volume B"
   publisher: "ACM"
   doi: "10.1145/3382026"
+  year: 2020
 
 books:
 
